# Titan_ai

./: .gitignore  README.md  install.bat  run.bat  start-dev.bat  stop.bat
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  browser.py  coordinator.py  desktop.py  memory.py  optimization.py  planner.py  security.py  vision.py
backend/app/api/: agents.py  memory.py  models.py  planner.py  plugins.py  routes.py  services.py  system.py
backend/app/core/: ai_client.py  cache.py  config.py  logger.py  permissions.py  vector_store.py
backend/app/modules/: __init__.py  automation.py  brain.py  browser_control.py  desktop_control.py  learning.py  memory_engine.py  planning.py  plugin.py  security.py  tool_manager.py  vision.py  voice.py
backend/tests/: test_health.py
desktop/: README.md
docs/: architecture.md  database-schema.md
frontend/: package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ChatPanel.tsx  Dashboard.tsx
frontend/styles/: globals.css
scripts/: start-dev.bat  start-dev.sh
